--- a/config/locales/blacklight.en.yml
+++ b/config/locales/blacklight.en.yml
@@ -1,3 +1,11 @@
 en:
   blacklight:
     application_name: 'Blacklight'
+
+    search:
+      fields:
+        date_tesim: "Date"
+        isbn_tesim: "ISBN"
+        editor_tesim: "Editor"
+        copyright_holder_tesim: "Copyright Holder"
+        buy_URL_ssim: "Buy Book"
