Removes redundant lines on curations_concerns/monographs_controller.rb
Display fields on Monographs show page

Create a presenter class for Monographs, update the solr document,
updates the Monograph controller, overrides the curation_concerns view
partial

--- a/config/locales/blacklight.en.yml
+++ b/config/locales/blacklight.en.yml
@@ -8,4 +8,4 @@ en:
         isbn_tesim: "ISBN"
         editor_tesim: "Editor"
         copyright_holder_tesim: "Copyright Holder"
-        buy_URL_ssim: "Buy Book"
+        buy_url_ssim: "Buy Book"
