Add custom File Set fields, create Heliotrope::Forms to override FileSetEdit forms, extend file_set_controller behavior to accept custom fields, create rpsec and test .png for FileSet creations; update date to date_published in blacklight and en locales

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -27,6 +27,12 @@ en:
         editor: "Editor"
         buy_url: "Buy Book URL"
         copyright_holder: "Copyright Holder"
+        date_published: "Date Published"
+        caption: "Caption"
+        alt_text: "Alternative Text"
+        content_type: "Content Type"
+        keywords: "Keywords"
+        relation: "Relation to Narrative"
   helpers:
     submit:
       role:
