--- a/config/locales/blacklight.en.yml
+++ b/config/locales/blacklight.en.yml
@@ -4,8 +4,13 @@ en:
 
     search:
       fields:
-        date_tesim: "Date"
+        date_published_tesim: "Date Published"
         isbn_tesim: "ISBN"
         editor_tesim: "Editor"
         copyright_holder_tesim: "Copyright Holder"
         buy_url_ssim: "Buy Book"
+        caption_tesim: "Caption"
+        alt_text_tesim: "Alternative Text"
+        content_type_tesim: "Content Type"
+        keywords_tesim: "Keywords"
+        relation_tesim: "Relation to Narrative"
