Change text on 'Organize Assets' button, add different versions for sections v. monographs

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -33,5 +33,6 @@ en:
         updated:   "User role has been updated."
         destroyed: "User role has been removed."
         batch_error: "There was a problem saving the user role(s)."
-  file_manager:
-    link_text: "Organize Sections"
+  manage_assets:
+    monograph_link_text: "Organize Sections and Assets"
+    section_link_text: "Organize Assets"
