--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -33,6 +33,8 @@ en:
         content_type: "Content Type"
         keywords: "Keywords"
         relation: "Relation to Narrative"
+        external_resource: "External Resource"
+        persistent_id: "Persistent ID"
   helpers:
     submit:
       role:
