add metadata fields

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -27,6 +27,9 @@ en:
         editor: "Editor"
         buy_url: "Buy Book URL"
         copyright_holder: "Copyright Holder"
+        copyright_status: "Copyright Status"
+        rights_granted: "Rights Granted"
+        rights_granted_creative_commons: "Rights Granted - Creative Commons"
         date_published: "Date Published"
         caption: "Caption"
         alt_text: "Alternative Text"
@@ -34,7 +37,22 @@ en:
         keywords: "Keywords"
         relation: "Relation to Narrative"
         external_resource: "External Resource"
-        persistent_id: "Persistent ID"
+        book_needs_handles: "Book Needs Handles?"
+        allow_download: "Allow Download?"
+        allow_hi_res: "Allow Hi-Res?"
+        exclusive_to_platform: "Exclusive to Platform?"
+        permissions_expiration_date: "Permissions Expiration Date"
+        allow_display_after_expiration: "Allow Display After Expiration?"
+        allow_download_after_expiration: "Allow Download After Expiration?"
+        credit_line: "Credit Line"
+        holding_contact: "Holding Contact"
+        ext_url_doi_or_handle: "External URL/DOI"
+        use_crossref_xml: "Use Crossref XML?"
+        primary_creator_role: "Primary Creator Role(s)"
+        display_date: "Display Date"
+        sort_date: "Sort Date"
+        transcript: "Transcript"
+        translation: "Translation(s)"
   helpers:
     submit:
       role:
