--- a/config/locales/blacklight.en.yml
+++ b/config/locales/blacklight.en.yml
@@ -8,6 +8,9 @@ en:
         isbn_tesim: "ISBN"
         editor_tesim: "Editor"
         copyright_holder_tesim: "Copyright Holder"
+        copyright_status_tesim: "Copyright Status"
+        rights_granted_tesim: "Rights Granted"
+        rights_granted_creative_commons_tesim: "Rights Granted - Creative Commons"
         buy_url_ssim: "Buy Book"
         caption_tesim: "Caption"
         alt_text_tesim: "Alternative Text"
@@ -15,4 +18,19 @@ en:
         keywords_tesim: "Keywords"
         relation_tesim: "Relation to Narrative"
         external_resource_ssim: "External Resource"
-        persistent_id_ssim: "Persistent ID"
+        book_needs_handles_ssim: "Book Needs Handles?"
+        allow_download_ssim: "Allow Download?"
+        allow_hi_res_ssim: "Allow Hi-Res?"
+        exclusive_to_platform_ssim: "Exclusive to Platform?"
+        permissions_expiration_date_ssim: "Permissions Expiration Date"
+        allow_display_after_expiration_ssim: "Allow Display After Expiration?"
+        allow_download_after_expiration_ssim: "Allow Download After Expiration?"
+        credit_line_ssim: "Credit Line"
+        holding_contact_ssim: "Holding Contact"
+        ext_url_doi_or_handle_ssim: "External URL/DOI"
+        use_crossref_xml_ssim: "Use Crossref XML?"
+        primary_creator_role_tesim: "Primary Creator Role(s)"
+        display_date_tesim: "Display Date"
+        sort_date_tesim: "Sort Date"
+        transcript_tesim: "Transcript"
+        translation_tesim: "Translation(s)"
