--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -24,7 +24,7 @@ en:
     labels:
       defaults:
         isbn: "ISBN (Hardcover)"
-        isbn_softcover: "ISBN (Softcover)"
+        isbn_paper: "ISBN (Paper)"
         isbn_ebook: "ISBN (E-Book)"
         editor: "Editor"
         buy_url: "Buy Book URL"
