labels for contributors

--- a/config/locales/blacklight.en.yml
+++ b/config/locales/blacklight.en.yml
@@ -39,3 +39,4 @@ en:
         search_year_tesim: "Search Year"
         transcript_tesim: "Transcript"
         translation_tesim: "Translation(s)"
+        contributor_tesim: "Contributors"
