--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -56,6 +56,7 @@ en:
         search_year: "Search Year"
         transcript: "Transcript"
         translation: "Translation(s)"
+        contributor: "Contributors"
   helpers:
     submit:
       role:
