consolidate labels, tidy FileSet form

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,43 +20,111 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
+  allow_display_after_expiration: "Allow Display After Expiration?"
+  allow_download: "Allow Download?"
+  allow_download_after_expiration: "Allow Download After Expiration?"
+  allow_hi_res: "Allow Hi-Res?"
+  alt_text: "Alternative Text"
+  author: "Author"
+  author_first_name: "Author (first name)"
+  author_last_name: "Author (last name)"
+  additional_authors: "Additional Authors"
+  book_needs_handles: "Book Needs Handles?"
+  buy_url: "Buy Book URL"
+  caption: "Caption"
+  citable_link: "Citable Link"
+  content_type: "Content Type"
+  contributor: "Contributors"
+  copyright_holder: "Copyright Holder"
+  copyright_status: "Copyright Status"
+  creator: "Creator"
+  creator_full_name: "Author"
+  credit_line: "Credit Line"
+  date_created: "Date Created"
+  date_published: "Date Published"
+  display_date: "Date"
+  doi: "DOI"
+  editor: "Editor"
+  embargo_release_date: "Embargo Release Date"
+  exclusive_to_platform: "Exclusive to Platform?"
+  ext_url_doi_or_handle: "External URL/DOI"
+  external_resource: "Externally-Hosted Resource?"
+  file_size: "File Size (bytes)"
+  hdl: "Handle"
+  holding_contact: "Holding Contact"
+  isbn: "ISBN (Hardcover)"
+  isbn_ebook: "ISBN (E-Book)"
+  isbn_paper: "ISBN (Paper)"
+  keywords: "Keywords"
+  lease_expiration_date: "Lease Expiration Date"
+  permissions_expiration_date: "Permissions Expiration Date"
+  creator_family_name: "Primary Creator (family name)"
+  creator_given_name: "Primary Creator (given name)"
+  primary_creator_role: "Primary Creator Role(s)"
+  press: "Publisher"
+  publisher: "Publisher"
+  relation: "Relation to Narrative"
+  resource_type: "Resource Type"
+  rights_granted: "Rights Granted"
+  rights_granted_creative_commons: "Rights Granted - Creative Commons"
+  search_year: "Search Year"
+  section: "Section"
+  section_title: "Related Chapter"
+  sort_date: "Sort Date"
+  sub_brand: "Sub-brand"
+  transcript: "Transcript"
+  translation: "Translation(s)"
+  use_crossref_xml: "Use Crossref XML?"
+
   simple_form:
     labels:
       defaults:
-        isbn: "ISBN (Hardcover)"
-        isbn_paper: "ISBN (Paper)"
-        isbn_ebook: "ISBN (E-Book)"
-        editor: "Editor"
-        buy_url: "Buy Book URL"
-        copyright_holder: "Copyright Holder"
-        copyright_status: "Copyright Status"
-        rights_granted: "Rights Granted"
-        rights_granted_creative_commons: "Rights Granted - Creative Commons"
-        date_published: "Date Published"
-        caption: "Caption"
-        alt_text: "Alternative Text"
-        content_type: "Content Type"
-        keywords: "Keywords"
-        relation: "Relation to Narrative"
-        external_resource: "External Resource"
-        book_needs_handles: "Book Needs Handles?"
-        allow_download: "Allow Download?"
-        allow_hi_res: "Allow Hi-Res?"
-        exclusive_to_platform: "Exclusive to Platform?"
-        permissions_expiration_date: "Permissions Expiration Date"
-        allow_display_after_expiration: "Allow Display After Expiration?"
-        allow_download_after_expiration: "Allow Download After Expiration?"
-        credit_line: "Credit Line"
-        holding_contact: "Holding Contact"
-        ext_url_doi_or_handle: "External URL/DOI"
-        use_crossref_xml: "Use Crossref XML?"
-        primary_creator_role: "Primary Creator Role(s)"
-        display_date: "Display Date"
-        sort_date: "Sort Date"
-        search_year: "Search Year"
-        transcript: "Transcript"
-        translation: "Translation(s)"
-        contributor: "Contributors"
+        allow_display_after_expiration: :"allow_display_after_expiration"
+        allow_download: :"allow_download"
+        allow_download_after_expiration: :"allow_download_after_expiration"
+        allow_hi_res: :"allow_hi_res"
+        alt_text: :"alt_text"
+        book_needs_handles: :"book_needs_handles"
+        buy_url: :"buy_url"
+        caption: :"caption"
+        citable_link: :"citable_link"
+        content_type: :"content_type"
+        contributor: :"contributor"
+        copyright_holder: :"copyright_holder"
+        copyright_status: :"copyright_status"
+        creator_family_name: :"creator_family_name"
+        creator_given_name: :"creator_given_name"
+        credit_line: :"credit_line"
+        date_created: :"date_created"
+        date_published: :"date_published"
+        display_date: :"display_date"
+        doi: :"doi"
+        editor: :"editor"
+        embargo_release_date: :"embargo_release_date"
+        exclusive_to_platform: :"exclusive_to_platform"
+        ext_url_doi_or_handle: :"ext_url_doi_or_handle"
+        external_resource: :"external_resource"
+        hdl: :"hdl"
+        holding_contact: :"holding_contact"
+        isbn: :"isbn"
+        isbn_ebook: :"isbn_ebook"
+        isbn_paper: :"isbn_paper"
+        keywords: :"keywords"
+        lease_expiration_date: :"lease_expiration_date"
+        permissions_expiration_date: :"permissions_expiration_date"
+        press: :"press"
+        primary_creator_role: :"primary_creator_role"
+        relation: :"relation"
+        resource_type: :"resource_type"
+        rights_granted: :"rights_granted"
+        rights_granted_creative_commons: :"rights_granted_creative_commons"
+        search_year: :"search_year"
+        section_title: :"section_title"
+        sort_date: :"sort_date"
+        sub_brand: :"sub_brand"
+        transcript: :"transcript"
+        translation: :"translation"
+        use_crossref_xml: :"use_crossref_xml"
   helpers:
     submit:
       role:
