Resolves #648, Resolves #649: change "chapter" to "section"

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -69,7 +69,7 @@ en:
   rights_granted_creative_commons: "Rights Granted - Creative Commons"
   search_year: "Search Year"
   section: "Section"
-  section_title: "Related Chapter"
+  section_title: "Related Section"
   sort_date: "Sort Date"
   sub_brand: "Sub-brand"
   transcript: "Transcript"
