"modify transcript label and help text, move to locales file, tweak css and ableplayer

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -125,6 +125,9 @@ en:
         transcript: :"transcript"
         translation: :"translation"
         use_crossref_xml: :"use_crossref_xml"
+    hints:
+      defaults:
+        transcript: "Transcripts must be formatted as WebVTT captions. <a href='https://developer.mozilla.org/en-US/docs/Web/API/WebVTT_API' target='_blank'>Get help with WebVTT formatting.</a>"
   helpers:
     submit:
       role:
