Sections become FileSet metadata
* Renamed the 'section' property to 'section_title' since that's what existing UI code expects.  Also refactored some specs to use the new propery

* Make rubocop happy

* Updated some specs to use the new FileSet#section_title property instead of Section#title

* Rake task to migrate existing prod data

* Added test cases for ordered_section_titles method

* Deleted much of the Section-related code

* Added TODO notes to rake tasks to remove Section code

* file_sets need to be reindexed after Section removal so that monograph_id is in their index

* reverse migrating FileSets, verification tasks

  Filesets are reversed on Sections' ordered members, so we want to undo
  that as we move them to the monograph.

  The rake tasks are a simple checks to be run before/after the Section
  removal task.

* importer is updated for sections as metadata

* don't show section_title in the file_set list of the monograph catalog page

--- a/config/locales/blacklight.en.yml
+++ b/config/locales/blacklight.en.yml
@@ -20,7 +20,7 @@ en:
         alt_text_tesim: "Alternative Text"
         content_type_tesim: "Content Type"
         keywords_tesim: "Keywords"
-        relation_tesim: "Relation to Narrative"
+        section_title_tesim: "Section"
         external_resource_ssim: "External Resource"
         book_needs_handles_ssim: "Book Needs Handles?"
         allow_download_ssim: "Allow Download?"
