Resolves #879 Adds fields for primary editor first and last name
We need to differentiate editors from "creators"/authors.

Because of how rdf works, we can't rely on order in the monograph.editor field.

So, like with "creator" we create first and last name fields for the "primary_editor"
and put the first editor in them, with remaining editors in the (unordered)
"editor" list.

This doesn't yet work with the importer, manual editing would need to happen after
importing a new monograph with multiple editors.

Because editors are not used in file_sets, we don't include this in a construct
like the "stores_creator_name_seperately.rb" file. We just put the fields in
the monograph model.

Right now the only use case is a book with 2 editors. When we get to 3, and if
order matters, we'll need to come up with something else...

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -44,7 +44,7 @@ en:
   date_published: "Date Published"
   display_date: "Date"
   doi: "DOI"
-  editor: "Editor"
+  editor: "Editors"
   embargo_release_date: "Embargo Release Date"
   exclusive_to_platform: "Exclusive to Platform?"
   ext_url_doi_or_handle: "External URL/DOI"
@@ -62,6 +62,8 @@ en:
   creator_given_name: "Primary Creator (given name)"
   primary_creator_role: "Primary Creator Role(s)"
   press: "Publisher"
+  primary_editor_family_name: "Editor (last name)"
+  primary_editor_given_name: "Editor (first name)"
   publisher: "Publisher"
   resource_type: "Resource Type"
   rights_granted: "Rights Granted"
@@ -112,6 +114,8 @@ en:
         permissions_expiration_date: :"permissions_expiration_date"
         press: :"press"
         primary_creator_role: :"primary_creator_role"
+        primary_editor_given_name: "primary_editor_given_name"
+        primary_editor_family_name: "primary_editor_family_name"
         resource_type: :"resource_type"
         rights_granted: :"rights_granted"
         rights_granted_creative_commons: :"rights_granted_creative_commons"
