--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -75,7 +75,27 @@ en:
   transcript: "Transcript"
   translation: "Translation(s)"
   use_crossref_xml: "Use Crossref XML?"
-
+  errors:
+    messages:
+      carrierwave_processing_error: failed to be processed
+      carrierwave_integrity_error: is not of an allowed file type
+      carrierwave_download_error: could not be downloaded
+      extension_whitelist_error: "You are not allowed to upload %{extension} files, allowed types: %{allowed_types}"
+      extension_blacklist_error: "You are not allowed to upload %{extension} files, prohibited types: %{prohibited_types}"
+      content_type_whitelist_error: "You are not allowed to upload %{content_type} files"
+      content_type_blacklist_error: "You are not allowed to upload %{content_type} files"
+      rmagick_processing_error: "Failed to manipulate with rmagick, maybe it is not an image?"
+      mini_magick_processing_error: "Failed to manipulate with MiniMagick, maybe it is not an image? Original Error: %{e}"
+      min_size_error: "File size should be greater than %{min_size}"
+      max_size_error: "File size should be less than %{max_size}"
+  activerecord:
+    errors:
+      models:
+        press:
+          attributes:
+            logo_path:
+              blank: "You must upload a logo image"
+              taken: "This logo image is already taken"
   simple_form:
     labels:
       defaults:
