Resolves #1229: Monograph Reindex Button

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -107,6 +107,8 @@ en:
       pageviews_html: "This item has been viewed <b>%{count}</b> times."
       read: "Read %{title}"
       read_book: "Read Book"
+      reindex: "Reindex"
+      reindexing: "Reindexing %{title}"
   permissions_expiration_date: "Permissions Expiration Date"
   press: "Publisher"
   press_catalog:
