Resolves #962, Upgrade to Hyrax 2
* bundle install
* rails hyrax:install:migrations; rails db:migrate
* Rights -> rights_statement and license in catalog_controller.rb
* Moved logic and overrides from our local Hyrax::DownloadsController to a local DownloadsControllerBehavior module and included it via application.rb and config.to_prepare
* Same with our local Hyrax::FileSetsControler -> FileSetsControllerBehavior. Deleted Hyax::DownloadsController and Hyrax::FileSetsController. The Behaviors are in /services, where should they live?
* Moved ::Hyrax::WorkBehavior and ::Hyrax::BasicMetadata to be AFTER the property declarations in the Monograph model and the FileSet model.
* IngestFileJob is now IngestJob
* Changed Hyrax::Actors::MonographActor to use the new "env" style actor stack. Refactored the spec, our actor specs are passing.
* to_solr now takes a parameter and should be to_solr(solr_doc = {})
* Hyrax's controllers/concerns/hyrax/controller.rb is gone taking with it the render_404 method. Need to implement it locally (or stop using it)
* Controller specs pass
* Removed new_collection_path, search_path_for_my_collections and admin_path from views
* dashboard_index_path is now dashboard_path, admin_path (for the admin_dashboard) is gone
* document.resource_type when used in a view with the glyphicon_type ExternalResourceHelper is now an Array, changed file_set_presenter to reflect that.
* Added config/authorities/right_statements.yml
* Updated the csv Importer to use Hyrax::Actors::Environment, Hyrax::UploadedFile, etc. importer specs pass.
* Added "include Hyrax::IndexesBasicMetadata" to MonographIndexer
* All specs pass
* Fixed (most...) deprecation warnings
* The importer wasn't working, fileset metadata not being saved due to job timing (which is why the specs, which don't use redis, passed). It's working but needs to be rethought or at least refactored
* Made a change to the solrconfig.xml file, added TermsComponent for dashboard Reporting
* monograph_catal

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -121,6 +121,7 @@ en:
       pageviews_html: "This item has been viewed <b>%{count}</b> times."
       read: "Read %{title}"
       read_book: "Read Book"
+      reindex: "Reindex Monograph"
       reindexing: "Reindexing %{title}"
   original_checksum: "Original Checksum"
   permissions_expiration_date: "Permissions Expiration Date"
