"featured representatives", tabs for monograph_catalog page

--- a/config/locales/hyrax.en.yml
+++ b/config/locales/hyrax.en.yml
@@ -1,6 +1,9 @@
 en:
   hyrax:
     account_name: "Fulcrum"
+    base:
+      items:
+        set_representative: "Set Representative"
     monographs:
       show:
         last_modified: "Last Modified"
