--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -61,6 +61,7 @@ en:
   copyright_holder: "Copyright Holder"
   copyright_status: "Copyright Status"
   creator: "Creator"
+  creator_display: "Authorship Display (free-form text)"
   creator_family_name: "Primary Creator (family name)"
   creator_full_name: "Author"
   creator_given_name: "Primary Creator (given name)"
@@ -163,6 +164,7 @@ en:
           contributor: :"contributor"
           copyright_holder: :"copyright_holder"
           copyright_status: :"copyright_status"
+          creator_display: :"creator_display"
           creator_family_name: :"creator_family_name"
           creator_given_name: :"creator_given_name"
           credit_line: :"credit_line"
