Resolves #1541: Restrict the Gabii EPUB

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -73,6 +73,10 @@ en:
   doi: "DOI"
   editor: "Editors"
   embargo_release_date: "Embargo Release Date"
+  e_pubs:
+    form:
+      create: "Create"
+      destroy: "Destroy"
   errors:
     messages:
       carrierwave_processing_error: failed to be processed
@@ -99,6 +103,10 @@ en:
         destroyed: "User role has been removed."
         batch_error: "There was a problem saving the user role(s)."
   holding_contact: "Holding Contact"
+  hyrax:
+    base:
+      items:
+        component: "Component"
   isbn: "ISBN (Hardcover)"
   isbn_ebook: "ISBN (E-Book)"
   isbn_paper: "ISBN (Paper)"
