use Hyrax CitationsBehavior

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -140,6 +140,7 @@ en:
   primary_editor_family_name: "Editor (last name)"
   primary_editor_given_name: "Editor (first name)"
   publisher: "Publisher"
+  citation_publisher: "Citation Publisher"
   redirect_to: "Redirect to"
   resource_type: "Resource Type"
   rights_granted: "Rights Granted"
